<resources>
    //Program dependent strings
    <string name="app_name">JapaneseStudyTool</string>
    <string name="databaseName">StudyGuide</string>
    <string name="initialCSV">jpnsData(initial).csv</string>
    <string name="requiredKanjiFlag">kanji</string>
    <string name="nounFlag">noun</string>
    <string name="adjectiveFlag">adjective</string>
    <string name="uVerbFlag">u-verb</string>
    <string name="ruVerbFlag">ru-verb</string>
    <string name="irrVerbFlag">irr-verb</string>
    <string name="otherFlag">other</string>
    <string name="grammarFlag">grammar</string>
    <string name="translationWebsite">https://translate.google.com/#ja/en</string>

    //Generic Strings
    <string name="engText">ENG</string>
    <string name="hiraganaText">ひらがな</string>
    <string name="kanjiText">漢字</string>

    <string name="japaneseLabel">Japanese:</string>
    <string name="englishLabel">English:</string>
    <string name="kanjiLabel">Kanji:</string>
    <string name="particleLabel">Particle/Prefix:</string>
    <string name="typeLabel">Type:</string>
    <string name="lessonLabel">Lessons:</string>
    <string name="requiredKanjiLabel">Required Kanji:</string>
    <string name="reqKanjiLabel">Req. Kanji</string>

    <string name="okLabel">OK</string>
    <string name="cancelLabel">Cancel</string>
    <string name="proceedLabel">Proceed</string>
    <string name="previousTermLabel">Prev</string>
    <string name="nextTermLabel">Next</string>

    //Messages
    <string name="loadDataWarning">Warning: will erase all data and load default data.</string>
    <string name="onBackPressedMessage">Are you sure you want to return?</string>
    <string name="warningTitle">Warning</string>
    <string name="errorTitle">Error</string>
    <string name="noTermsFound">No Term(s) found.</string>
    <string name="emptyStringMessage">Please do not leave any fields blank</string>
    <string name="multiLineWarning">There were multiple lines detected.</string>
    <string name="lessonSpinnerLabel">Custom...</string>
    <string name="fillReqFields">Please make sure to fill in the Japanese, English, and Lesson fields</string>


    //HomePage
    <string name="storyButtonLabel">Create a story / 話を作りましょう</string>
    <string name="studyButtonLabel">Study Terms</string>
    <string name="addTermsButtonLabel">Add Terms</string>
    <string name="editTermsButtonLabel">Edit Terms</string>
    <string name="loadDataButtonLabel">Load Initial Data</string>

    //TermsMenuPage
    <string name="flashCardModeText">Flash Card Mode</string>
    <string name="kanjiStrokeModeText">Kanji Stroke Practice Mode</string>
    <string name="storyModeText">Story Mode</string>
    <string name="initialCount">0</string>
    <string name="displayHintLanguage">Use Hiragana as hint</string>

    <string name="verbLabel">Verb(s)</string>
    <string name="nounLabel">Noun(s)</string>
    <string name="adjectiveLabel">Adjective(s)</string>
    <string name="otherTermLabel">Other(s)</string>
    <string name="grammarLabel">Grammar point(s)</string>

    <string name="useSpecificCountText">Use Specific Term Counts</string>
    <string name="showJpnsFirstText">Show Japanese First</string>
    <string name="showKanjiText">Show Kanji</string>
    <string name="showKanjiFirst">Show Kanji First</string>
    <string name="useKanjiOnly">Use Kanji Only</string>
    <string name="useLessonKanjiOnly">Use Lesson Kanji Only</string>

    <string name="lessonSelectionText">Include Lessons:</string>
    <string name="submitButtonText">Confirm</string>

    //Edit TermPage
    <string name="deleteFromDatabaseWarning">You are about to delete this term from the database.</string>
    <string name="searchExactMatch">Search for exact match</string>
    <string name="searchSpecificAttributeLabel">Search by Attribute:</string>
    <string name="searchEditableButtonText">Search</string>
    <string name="overwriteMessage">Are you sure you want to over-write this term?</string>

    //AddTermPage

    <string name="addTermButtonLabel">Add</string>
    <string name="mergeTermButtonLabel">Merge</string>
    <string name="mergeTermMessage">Are you sure you want to merge these terms?\nEnglish, Japanese, and Type will not be changed.</string>


    //Similarities Dialog
    <string name="deleteButtonText">X</string>
    <string name="editButtonText">Edit</string>
    <string name="similaritiesTitle">Similarities Found</string>
    <string name="newTermLabel">New Term</string>
    <string name="returnToList">Return to list</string>
    <string name="addNewTermMessage">Would you like to add this term into the database?</string>
    <string name="addNewTerm">Add New Term</string>

    //KanjiWritingPage
    <string name="kanjiWritingLabel">Kanji Writing Practice</string>
    <string name="showLabel">Show</string>
    <string name="eraseAllTitle">Start Fresh</string>
    <string name="eraseAllMessage">Erase current drawing?</string>
    <string name="verySmallStrokeSize">Very Small</string>
    <string name="smallStrokeSize">Small</string>
    <string name="mediumStrokeSize">Medium</string>
    <string name="largeStrokeSize">Large</string>
    <string name="veryLargeStrokeSize">Very Large</string>

</resources>
