<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Pages.DatabaseEditing.AddTermsPage">

    <TextView
        android:id="@+id/addJapaneseLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/japaneseLabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/addJapaneseTextBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <View
        android:id="@+id/divider29"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/dividerColor" />

    <TextView
        android:id="@+id/addEnglishLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/englishLabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/addEnglishTextBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/dividerColor" />

    <TextView
        android:id="@+id/addKanjiLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kanjiLabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/addKanjiTextBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <View
        android:id="@+id/divider12"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/dividerColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addTypeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/typeLabel"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <Spinner
            android:id="@+id/addTypeDropDownBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTint="@color/buttonColor"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/lessonLabel"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

        <Spinner
            android:id="@+id/addLessonDropDownBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTint="@color/buttonColor"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <View
        android:id="@+id/divider16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/dividerColor" />

    <TextView
        android:id="@+id/addParticleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/particleLabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/addParticleTextBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/dividerColor" />

    <CheckBox
        android:id="@+id/addReqKanjiCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/checkBoxColor"
        android:text="@string/reqKanjiLabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <View
        android:id="@+id/divider15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/dividerColor" />

    <Button
        android:id="@+id/addNewTermButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/addTermButtonLabel"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/textSize" />

</LinearLayout>